cmake_minimum_required(VERSION 3.10)

set(viewer_INCLUDES
    include/viewer/BaseViewport.hpp
    include/viewer/Camera.hpp
    include/viewer/ModelViewport.hpp
    include/viewer/PostprocessingViewport.hpp
    include/viewer/TensorFieldViewport.hpp
    include/viewer/ViewportData.hpp
)

set(viewer_HEADERS
    src/InputStates/Input.hpp
    src/InputStates/InputState.hpp
    src/InputStates/ISLeftClick.hpp
    src/InputStates/ISLeftDrag.hpp
    src/InputStates/ISRightClick.hpp
    src/InputStates/ISRightDrag.hpp
    src/InputStates/ISStart.hpp
    src/RenderGroup.hpp
    src/SceneGraph.hpp
    src/SceneGraphComponents/boundaries/BoundaryStrategy.hpp
    src/SceneGraphComponents/boundaries/CollisionDetection.hpp
    src/SceneGraphComponents/boundaries/SphericalBoundary.hpp
    src/SceneGraphComponents/DisplacementsRepresentationPolicy/DisplacementsPolicy.hpp
    src/SceneGraphComponents/DisplacementsRepresentationPolicy/DisplacementsRepresentationPolicy.hpp
    src/SceneGraphComponents/DisplacementsRepresentationPolicy/NoDisplacementsPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/ElementRepresentationFlyweightFactory.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/ElementRepresentationPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/ConstantGradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/GradientFieldFlyweightFactory.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/NeutralGradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain11GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain12GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain13GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain22GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain23GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain33GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress11GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress12GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress13GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress22GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress23GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress33GradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/VonMisesGradientFieldPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldRepresentationPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/OpaqueRepresentationPolicy.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressFieldFactory.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressFieldRepresentation.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressTensor.hpp
    src/SceneGraphComponents/ElementRepresentationPolicy/StressFieldRepresentationPolicy.hpp
    src/SceneGraphComponents/Elements/Hexahedron20.hpp
    src/SceneGraphComponents/Elements/Hexahedron27.hpp
    src/SceneGraphComponents/Elements/Hexahedron8.hpp
    src/SceneGraphComponents/Elements/Prism15.hpp
    src/SceneGraphComponents/Elements/Prism18.hpp
    src/SceneGraphComponents/Elements/Prism6.hpp
    src/SceneGraphComponents/Elements/Tetrahedron10.hpp
    src/SceneGraphComponents/Elements/Tetrahedron4.hpp
    src/SceneGraphComponents/hud/HudObject.hpp
    src/SceneGraphComponents/hud/HudSelection.hpp
    src/SceneGraphComponents/Operations/OperationsVisitor.hpp
    src/SceneGraphComponents/Operations/SelectFrustumInclusionOperation.hpp
    src/SceneGraphComponents/Operations/SelectRayIntersectionOperation.hpp
    src/SceneGraphComponents/Operations/ToggleRenderOperation.hpp
    src/SceneGraphComponents/Operations/ToggleSelectionOperation.hpp
    src/SceneGraphComponents/SceneComponentFactory.hpp
    src/SceneGraphComponents/SceneGraphComponent.hpp
    src/SceneGraphComponents/SceneGraphException.hpp
    src/SceneGraphComponents/SGCElement.hpp
    src/SceneGraphComponents/SGCNode.hpp
    src/SceneGraphComponents/SGCNodeRestrictions.hpp
    src/SceneGraphComponents/SGCPickRay.hpp
    src/ViewportStates/ViewportState.hpp
    src/ViewportStates/VPStateDisplacements.hpp
    src/ViewportStates/VPStateGradients.hpp
    src/ViewportStates/VPStateModel.hpp
    src/ViewportStates/VPStateTensorFields.hpp
    )

set(viewer_SOURCES
    src/BaseViewport.cpp
    src/Camera.cpp
    src/InputStates/Input.cpp
    src/InputStates/InputState.cpp
    src/InputStates/ISLeftClick.cpp
    src/InputStates/ISLeftDrag.cpp
    src/InputStates/ISRightClick.cpp
    src/InputStates/ISRightDrag.cpp
    src/InputStates/ISStart.cpp
    src/ModelViewport.cpp
    src/PostprocessingViewport.cpp
    src/RenderGroup.cpp
    src/SceneGraph.cpp
    src/SceneGraphComponents/boundaries/BoundaryStrategy.cpp
    src/SceneGraphComponents/boundaries/CollisionDetection.cpp
    src/SceneGraphComponents/boundaries/SphericalBoundary.cpp
    src/SceneGraphComponents/DisplacementsRepresentationPolicy/DisplacementsPolicy.cpp
    src/SceneGraphComponents/DisplacementsRepresentationPolicy/DisplacementsRepresentationPolicy.cpp
    src/SceneGraphComponents/DisplacementsRepresentationPolicy/NoDisplacementsPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/ElementRepresentationFlyweightFactory.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/ElementRepresentationPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/ConstantGradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/GradientFieldFlyweightFactory.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/NeutralGradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain11GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain12GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain13GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain22GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain23GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain33GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress11GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress12GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress13GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress22GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress23GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress33GradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/VonMisesGradientFieldPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldRepresentationPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/OpaqueRepresentationPolicy.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressFieldFactory.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressFieldRepresentation.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressTensor.cpp
    src/SceneGraphComponents/ElementRepresentationPolicy/StressFieldRepresentationPolicy.cpp
    src/SceneGraphComponents/Elements/Hexahedron20.cpp
    src/SceneGraphComponents/Elements/Hexahedron27.cpp
    src/SceneGraphComponents/Elements/Hexahedron8.cpp
    src/SceneGraphComponents/Elements/Prism15.cpp
    src/SceneGraphComponents/Elements/Prism18.cpp
    src/SceneGraphComponents/Elements/Prism6.cpp
    src/SceneGraphComponents/Elements/Tetrahedron10.cpp
    src/SceneGraphComponents/Elements/Tetrahedron4.cpp
    src/SceneGraphComponents/hud/HudObject.cpp
    src/SceneGraphComponents/hud/HudSelection.cpp
    src/SceneGraphComponents/Operations/OperationsVisitor.cpp
    src/SceneGraphComponents/Operations/SelectFrustumInclusionOperation.cpp
    src/SceneGraphComponents/Operations/SelectRayIntersectionOperation.cpp
    src/SceneGraphComponents/Operations/ToggleRenderOperation.cpp
    src/SceneGraphComponents/Operations/ToggleSelectionOperation.cpp
    src/SceneGraphComponents/SceneComponentFactory.cpp
    src/SceneGraphComponents/SceneGraphComponent.cpp
    src/SceneGraphComponents/SGCElement.cpp
    src/SceneGraphComponents/SGCNode.cpp
    src/SceneGraphComponents/SGCNodeRestrictions.cpp
    src/SceneGraphComponents/SGCPickRay.cpp
    src/TensorFieldViewport.cpp
    src/ViewportData.cpp
    src/ViewportStates/ViewportState.cpp
    src/ViewportStates/VPStateDisplacements.cpp
    src/ViewportStates/VPStateGradients.cpp
    src/ViewportStates/VPStateModel.cpp
    src/ViewportStates/VPStateTensorFields.cpp
    )

add_library(viewer OBJECT
    ${viewer_INCLUDES}
    ${viewer_HEADERS}
    ${viewer_SOURCES}
    )

target_include_directories(viewer
    PUBLIC 
    ./include
    ${CMAKE_CURRENT_SOURCE_DIR}/src #FIXIT included to simplify migration
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_SOURCE_DIR}/src #TODO required to include ./ProjectVisitor/ProjectVisitor.hpp and ./Project.hpp to sidestep dependency
    )

set_target_properties(viewer
    PROPERTIES
    CXX_STANDARD 14
    CXX_EXTENSIONS OFF
    AUTOMOC ON
    AUTOUIC ON
    )

target_link_libraries(viewer
    PUBLIC
    libfemp
    Qt5::Core
    PRIVATE
    application
    selection
    persistence
    gui_options::Object
    Qt5::Gui
    Qt5::OpenGL
    )

add_library(viewer::Object ALIAS viewer)